<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fdgproject.firedge.autotaller.FormularioVehiculo"
    android:background="@drawable/shape_background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_aceptar"
                    android:id="@+id/btAceptar"
                    android:layout_weight="1"
                    android:onClick="aceptar_bt" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_cancelar"
                    android:id="@+id/btCancelar"
                    android:layout_weight="1"
                    android:onClick="cancelar_bt" />
            </LinearLayout>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dpFecha"
                android:calendarViewShown="false"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etMatricula"
                    android:layout_weight="1"
                    android:hint="@string/et_matricula" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spTipo"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAveria"
                android:hint="@string/et_averia"
                android:layout_marginBottom="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etPresupuesto"
                    android:layout_weight="1"
                    android:hint="@string/et_presupuesto" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_urgente"
                    android:id="@+id/cbUrgente"
                    android:layout_weight="1"
                    android:checked="false"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
